# rvc_control_ooad

./: CMakeLists.txt
.cursor/plans/: 우측_센서_추론_9c78dd15.plan.md
.cursor/rules/: cpp-impl.mdc  gtest-framework.mdc  testing.mdc
.cursor/skills/OOA-01-Quality-Attribute-Scenarios/: ISO-25023-Reference.md  SKILL.md
.cursor/skills/OOA-01-UseCases/: SKILL.md
.cursor/skills/OOA-02-Domain-Model/: SKILL.md
.cursor/skills/OOA-02-UseCases/: SKILL.md
.cursor/skills/OOA-03-Domain-Model/: SKILL.md
.cursor/skills/OOD-01-Sequence-Class/: SKILL.md
.cursor/skills/OOI-01-Implementation/: SKILL.md
.cursor/skills/Plan-01-System-Requirements/: SKILL.md
System-Test/: system_test_main.cpp
System-Test/scenarios/: ST-001.json  ST-002.json  ST-003.json  ST-004.json  ST-005.json  ST-006.json  ST-007.json  ST-008.json  ST-009.json  ST-010.json  ST-011.json  ST-012.json  ST-013.json  ST-014.json  ST-015.json  ST-016.json  ST-017.json  ST-018.json  ST-019.json  ST-020.json  ST-021.json  ST-022.json  ST-023.json  ST-024.json  ST-025.json  custom_map.json  manifest.txt
docs/: Preliminary-Requirements.md  README.md
docs/OOA/: 00-UseCase-Diagram.md  01-System-Requirements.md  02-Domain-Model.md
docs/OOA/UseCases/: UC-001.md  UC-002.md  UC-003.md  UC-004.md  UC-005.md
docs/OOD/: Traceability-Matrix.md
docs/OOD/DCD/: DCD.md
docs/OOD/SD/: SD-UC-001-S01.md  SD-UC-001-S91.md  SD-UC-002-S01.md  SD-UC-003-S01.md  SD-UC-003-S02.md  SD-UC-003-S91.md  SD-UC-004-S01.md  SD-UC-004-S02.md  SD-UC-005-S01.md
docs/System-Test/: Capability-Catalog.md  Scenarios.md
include/rvc/: CleaningService.hpp  DustDetector.hpp  GridSensorReader.hpp  IDustDetector.hpp  IObstacleDetector.hpp  ISensorReader.hpp  MapJson.hpp  MapModel.hpp  MovementController.hpp  ObstacleDetector.hpp  RvcController.hpp  SimulationEngine.hpp  Types.hpp
sim/: SimulatorApp.cpp  SimulatorApp.hpp  main.cpp
src/rvc/: CleaningService.cpp  DustDetector.cpp  GridSensorReader.cpp  MapJson.cpp  MapModel.cpp  MovementController.cpp  ObstacleDetector.cpp  RvcController.cpp  SimulationEngine.cpp
test/: cleaning_service_test.cpp  movement_controller_test.cpp  obstacle_detector_test.cpp  rvc_controller_test.cpp  simulation_engine_test.cpp
